--- a/PortaleGeo/PortaleGeoWeb.csproj
+++ b/PortaleGeo/PortaleGeoWeb.csproj
@@ -384,7 +384,7 @@
     <Compile Include="Helpers\CohesionAuthenticationHelper.cs" />
     <Compile Include="Helpers\ExcelExportHelper.cs" />
     <Compile Include="Helpers\PasswordHelper.cs" />
-    <Compile Include="Message\Response.cs" />
+    <Compile Include="Here\Response.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AspNetRoles.cs">
       <DependentUpon>Model_PortaleGeoWeb.tt</DependentUpon>
