LS - aggiornamento ViewModel + webconfig (db ufficiale)

--- a/PortaleGeo/Web.config
+++ b/PortaleGeo/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-	  <add name="DefaultConnection" connectionString="server=PORT-DELDUCHETT\SQLEXPRESS02;database=GeoCode;uid=sa;password=Sa.sa.sa;" providerName="System.Data.SqlClient" />
-    <add name="GeoCodeEntities1" connectionString="metadata=res://*/Models.Model_PortaleGeoWeb.csdl|res://*/Models.Model_PortaleGeoWeb.ssdl|res://*/Models.Model_PortaleGeoWeb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PORT-DELDUCHETT\SQLEXPRESS02;initial catalog=GeoCode;persist security info=True;user id=sa;password=Sa.sa.sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="DefaultConnection" connectionString="server=SQL2016CLUST02\MSSQLSERV_C;database=IntraGeoRef;uid=ut_IntraGeoRef ;password=K1-u9_b745P;" providerName="System.Data.SqlClient" />
+    <add name="GeoCodeEntities1" connectionString="metadata=res://*/Models.Model_PortaleGeoWeb.csdl|res://*/Models.Model_PortaleGeoWeb.ssdl|res://*/Models.Model_PortaleGeoWeb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL2016CLUST02\MSSQLSERV_C;initial catalog=IntraGeoRef;persist security info=True;user id=ut_IntraGeoRef;password=K1-u9_b745P;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
 	<add key="owin:AutomaticAppStartup" value="true" />
