--- a/PortaleGeo/Web.config
+++ b/PortaleGeo/Web.config
@@ -21,15 +21,16 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="ExecuteTaskServiceCallSchedulingStatus" value="ON" />
     <add key="ExecuteTaskScheduleCronExpression" value="0 0/30 * 1/1 * ? *" />
+	  
     <add key="sso.check.url" value="https://cohesion2.regione.marche.it/SPManager/WAYF.aspx" />
     <add key="sso.webCheckSessionSSO" value="https://cohesion2.regione.marche.it/SPManager/webCheckSessionSSO.aspx" />
-    <add key="sso.additionalData" value="AuthRestriction=0,1,2,3;https://ioservice.intra/Account/LogOff" />
+    <add key="sso.additionalData" value="AuthRestriction=0,1,2,3;https://portalegeo.intra/Account/LogOff" />
     <!--Impostare qui l'url pubblico completo della pagina di logout del proprio sito-->
     <!-- <add key="sso.additionalData" value="AuthRestriction=0,1,2,3;http://proprio_host_pubblico/prorpio_sito/Logout.aspx"/> -->
     <!-- Prima del proprio url di logout è possibile specificiare, separato da ';' i tipi di autenticazioni da visualizzare in Cohesion: 0 = autenticazione con Utente e Password, 1 = autenticazione con Utente Password e PIN, 2 = autenticazione Smart Card, 3 = autenticazione di Dominio (valida solo per utenti interni alla rete regionale) -->
     <add key="site.URLLogout" value="../Logout.aspx?ReturnUrl=https%3A%2F%2Fcohesion2.regione.marche.it%2FSPManager%2FLogout.aspx" />
     <!-- Inserire l'url della propria pagina di logout relativo alla posizione della pagina protetta; non modificare il valore di ReturnUrl -->
-    <add key="site.IndexURL" value="https://ioservice.intra/Account/Login" />
+    <add key="site.IndexURL" value="https://portalegeo.intra/Account/Login" />
     <!-- Inserire l'url della propria pagina a cui ritornare in caso di errore di autenticazione -->
     <add key="site.ID_SITO" value="GeoCode" />
     <add key="EPPlus:ExcelPackage.LicenseContext" value="NonCommercial" />
