--- a/PortaleGeo/PortaleGeo2.0.csproj
+++ b/PortaleGeo/PortaleGeo2.0.csproj
@@ -503,6 +503,7 @@
     <Content Include="Content\ui-bootstrap-csp.css" />
     <Content Include="HowToPublish.txt" />
     <Content Include="Images\609px-Map_of_region_of_Marche,_Italy,_with_provinces-it.svg.png" />
+    <Content Include="Images\download.png" />
     <Content Include="Images\geocoding_02.png" />
     <Content Include="Images\HERE_logo.svg.png" />
     <Content Include="Images\infasedisviluppo.png" />
